fix: [AIFLY-1699] Avoid chat widget overlap with knowledge hub table pagination (#11152)

--- a/apps/helpdesk/src/pages/aiAgent/KnowledgeHub/Table/KnowledgeHubTable.less
+++ b/apps/helpdesk/src/pages/aiAgent/KnowledgeHub/Table/KnowledgeHubTable.less
@@ -140,6 +140,7 @@
     .pagination {
         margin-top: var(--spacing-md);
         margin-right: var(--spacing-md);
+        padding-bottom: 100px; // To avoid pagination buttons be covered by chat widget
     }
 
     .highlight {
